Modifs pour le nouveau seveur